--- a/style.css
+++ b/style.css
@@ -451,3 +451,59 @@ h3{
     margin-top: 100px;
     color: #fff;
 }
+.location{
+    width: 80%;
+   margin: auto;
+   padding: 80px 0;
+}
+.location h1{
+    text-align: center;
+    font-size: 32px;
+    margin-top: 25px;
+    margin-bottom: 35px;
+}
+.location img{
+    width: 100%;
+    height: 100vh;
+    margin: 0 20px;
+}
+
+.contact-col{
+    flex-basis: 48%;
+    margin-bottom: 30px;
+}
+
+.contact-col div{
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.contact-col div .fa{
+    font-size: 28px;
+    color: #f44336;
+    margin: 10px;
+    margin-right: 30px;
+}
+
+.contact-col div p{
+    padding: 0;
+}
+
+.contact-col div h5{
+    font-size: 20px;
+    margin-bottom: 5px;
+    color: darkslategrey;
+    font-weight: 400;
+}
+
+.contact-col input, .contact-col textarea{
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 17px;
+    outline: none;
+    color: black;
+    border: 1px solid mediumblue;
+    box-sizing: border-box;
+}
+
