--- a/style.css
+++ b/style.css
@@ -467,7 +467,15 @@ h3{
     height: 100vh;
     margin: 0 20px;
 }
-
+@media(max-width: 700px){
+    .location img{
+        width: 100%;
+        height: 30vh;
+        margin: 10px 0;
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+}
 .contact-col{
     flex-basis: 48%;
     margin-bottom: 30px;
